--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ border: 2.5px solid #233056;
     }
     .main-content-inner {
       width: 100%;
-      max-width: 1000px;
+      max-width: auto;
       background: #fff;
       margin: 0 auto;
     }
