--- a/index.html
+++ b/index.html
@@ -1,124 +1,151 @@
  <!DOCTYPE html>
 <html lang="ko">
 <head>
+  <base target="_blank">
   <meta charset="UTF-8">
-  <title>폭 제한 없는 중앙정렬 검색엔진</title>
+  <title>상단고정 검색엔진 + 콘텐츠</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     html, body {
       margin: 0;
       padding: 0;
       background: #fff;
-      width: 100vw;
-      min-height: 100vh;
+      font-family: 'Segoe UI', '맑은 고딕', 'NanumGothic', Arial, sans-serif;
     }
-    /* 상단 검색바 전체 (폭 제한 없음) */
-    .search-bar-fixed {
-      position: sticky;
-      top: 0;
+    body {
+      /* 검색창(고정)의 높이만큼 띄워서 콘텐츠 가려지지 않게 */
+      padding-top: 80px;
       background: #fff;
-      z-index: 100;
-      width: auto;
-      box-shadow: 0 2px 14px 0 rgba(30,32,80,0.06);
-      padding: 24px 0 16px 0;
     }
-    /* 검색바 내부 중앙정렬 */
-    .search-bar-inner {
+    .search-bar-area {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100vw;
+      z-index: 100;
+      background: #fff;
+      box-shadow: 0 2px 16px 0 rgba(30,32,80,0.10);
       display: flex;
       justify-content: center;
       align-items: center;
-      width: 100%;
+      min-height: 80px;
     }
-    /* 검색폼 스타일 */
-    .snark-form-row {
+    .search-form-wrap {
+      width: 100%;
+      max-width: 1100px;
       display: flex;
+      justify-content: center;
       align-items: center;
       background: #fff;
-      border-radius: 36px;
-      box-shadow: 0 1px 5px rgba(30,32,80,0.03);
-border: 2.5px solid #233056; 
+      border-radius: 16px;
+      box-sizing: border-box;
+      padding: 0 10px;
+    }
+    .search-container {
+      display: flex;
+      flex: 1 1 400px;
+      min-width: 180px;
+      max-width: 600px;
+      background: #fff;
+      border: 3px solid #222f66;
+      border-radius: 40px;
+      height: 58px;
       overflow: hidden;
-      max-width: 700px;
-      width: 100%;
+      box-sizing: border-box;
     }
     .search-select {
       border: none;
       background: transparent;
-      font-size: 1.13rem;
-      color: #222;
-      padding: 0 18px 0 18px;
-      min-width: 145px;
+      font-size: 1.14rem;
+      color: #232356;
+      padding: 0 18px 0 20px;
+      min-width: 110px;
+      max-width: 190px;
       outline: none;
       appearance: none;
-      height: 56px;
+      height: 100%;
       flex-shrink: 0;
-      font-family: inherit;
+      font-weight: bold;
     }
     .search-input {
       flex: 1;
       border: none;
       background: transparent;
-      font-size: 1.13rem;
+      font-size: 1.11rem;
       color: #333;
-      padding: 0 16px;
+      padding: 0 15px;
       outline: none;
-      height: 56px;
+      height: 100%;
       font-family: inherit;
       box-sizing: border-box;
-      min-width: 60px;
     }
     .search-btn {
       border: none;
-      border-radius: 0 36px 36px 0;
-      background: #3C3C8C;
+      border-left: 3px solid #222f66;
+      background: #222f66;
       color: #fff;
-      font-size: 1.15rem;
+      font-size: 1.21rem;
       font-weight: bold;
       cursor: pointer;
-      height: 56px;
-      min-width: 100px;
-      padding: 0 24px;
+      height: 58px;
+      min-width: 105px;
+      padding: 0 25px;
       display: flex;
       align-items: center;
       justify-content: center;
       transition: background 0.2s;
+      border-radius: 0 40px 40px 0;
     }
     .search-btn:hover {
-      background: #232356;
+      background: #142044;
     }
-    /* 메인 콘텐츠 */
+    @media (max-width: 900px) {
+      .search-form-wrap { max-width: 99vw; }
+      .search-container { max-width: 99vw; }
+    }
+    @media (max-width: 600px) {
+      .search-bar-area { min-height: 63px; }
+      .search-form-wrap { padding: 0 2px; }
+      .search-container {
+        border-radius: 28px;
+        min-width: 0;
+        width: 100%;
+        max-width: 100vw;
+        height: 44px;
+      }
+      .search-select, .search-input {
+        height: 44px;
+        font-size: 1rem;
+        padding: 0 8px;
+      }
+      .search-btn {
+        min-width: 0;
+        padding: 0 5px;
+        font-size: 1rem;
+        height: 44px;
+        border-radius: 0 28px 28px 0;
+      }
+      body { padding-top: 66px; }
+    }
+    /* 메인 콘텐츠 영역 */
     .main-content {
       width: 100%;
-      background: #fff;
-      min-height: 600px;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: flex-start;
-      padding: 36px 0;
-    }
-    .main-content-inner {
-      width: 100%;
-      max-width: auto;
-      background: #fff;
+      max-width: 1100px;
       margin: 0 auto;
-    }
-    /* 모바일 반응형 */
-    @media (max-width: 700px) {
-      .snark-form-row { max-width: 98vw; border-radius: 18px; }
-      .search-select, .search-input, .search-btn { height: 42px; font-size: 1rem; }
-      .search-btn { min-width: 70px; padding: 0 8px; }
-      .main-content-inner { max-width: 98vw; }
+      padding: 0 16px;
+      min-height: 800px;
+      background: #fff;
+      box-sizing: border-box;
     }
   </style>
 </head>
 <body>
-  <!-- 상단 검색창 -->
-  <div class="search-bar-fixed">
-    <div class="search-bar-inner">
-      <form id="snarkForm" onsubmit="HandleForm(this); return false;" class="snark-form-row" autocomplete="off">
+  <!-- 상단 검색창(항상 고정) -->
+  <div class="search-bar-area">
+    <form id="snarkForm" class="search-form-wrap" autocomplete="off">
+      <div class="search-container">
         <select name="service" class="search-select">
-          <option>통합검색-네이버검색엔진 선택 ▼</option>
+          <option>통합검색-네이버▼</option>
           <option>통합검색-Google</option>
           <option>주식챠트검색-Investing</option>
           <option>챠트검색2-숫자입력</option>
@@ -176,13 +203,13 @@ border: 2.5px solid #233056;
         </select>
         <input size="44" name="query" class="search-input" placeholder="검색어를 입력하세요">
         <input type="submit" value="검색" class="search-btn">
-      </form>
-    </div>
+      </div>
+    </form>
   </div>
-  <!-- 메인 콘텐츠 -->
+
+  <!-- 하단 메인 콘텐츠 -->
   <div class="main-content">
-    <div class="main-content-inner">
-<div class="posts ">
+
 <div class="posts " style="position: relative; margin: 25px auto; width: 1000px; font-family: Helvetica, Arial, sans-serif; font-size: 11px; text-align: -webkit-center; background-color: #f9f9f9;">
 <div class="post load" id="post_" style="float: left; position: relative; width: 1000px; padding: 20px; margin: 5px; background-color: #ffffff;">
 <table border="0" style="color: #444444; font-family: Helvetica, Arial, sans-serif; font-size: 11px;">
@@ -1838,8 +1865,10 @@ border: 2.5px solid #233056;
 </div>
 <div class="main-content">
 <p><iframe frameborder="0" height="1" id="ga_target" scrolling="no" src="https://assets.tumblr.com/analytics.html?_v=9f5febfd57a8a649c598d888f2d9e062#https://stock7337.tumblr.com" width="1" style="font-family: Helvetica, Arial, sans-serif; font-size: 11px; text-align: -webkit-center; background-color: transparent; overflow: hidden; position: absolute; top: 0px; left: 0px; z-index: 9999;"></iframe></p>
-    </div>
+</div>
+
   </div>
+
   <script>
     var snarkEngines = [
       { name: "통합검색-네이버", home: "https://www.naver.com/", search: "https://search.naver.com/search.naver?query=" },
@@ -1898,13 +1927,14 @@ border: 2.5px solid #233056;
       { name: "만화검색-stoon1", home: "https://stoon1.com/webtoon/index/11", search: "https://stoon1.com/search?skeyword=" },
       { name: "만화검색-skytoon1", home: "https://www.skytoon1.com/webtoon/index/11", search: "https://www.skytoon1.com/search?skeyword=" }
     ];
-    function HandleForm(form) {
-      var idx = form.service.selectedIndex;
-      var q = form.query.value.trim();
+    document.getElementById("snarkForm").onsubmit = function(e){
+      e.preventDefault();
+      var idx = this.service.selectedIndex;
+      var q = this.query.value.trim();
       var eng = snarkEngines[idx];
       var url = q ? (eng.search + encodeURIComponent(q)) : eng.home;
       window.open(url, '_blank');
-    }
+    };
   </script>
 </body>
 </html>
